# Transect-stitch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: README.md
src/transect_stitch/: __init__.py  __main__.py  cli.py  geo.py  gui.py  inspect.py  metadata.py  stitch.py  video.py
tests/: test_geo.py  test_metadata.py
